--- a/record/bookRecord.org
+++ b/record/bookRecord.org
@@ -481,7 +481,7 @@ Dirty Flag
 Object Pool
 Spatial Partition
 
-*** mine experience
+*** my experience
 The book is full of practical experiences and the discussition is very detailed and instructive.
 
 The "State pattern" chapter discuss the Concurrent State Machines, Hierarchical State Machines, Pushdown Automata that
@@ -498,7 +498,389 @@ The "Spatial Partition" chapter is important too that i will use the technology 
 
 
 ** 《编程珠玑》 1遍
+内容概要说明
+   本书章节相互独立，在基础、性能、应用三个部分的主题中，给出了案例、经验、总结，并且每章后面还有习题，确实是一本很好的
+经典书籍！
 
 
-** 《OpenGL Insights》未读
+目录说明
+第一部分　基础
+　　第1章　开篇
+　　1.1　一次友好的对话
+　　1.2　准确的问题描述
+　　1.3　程序设计
+　　1.4　实现概要
+　　1.5　原理
+　　1.6　习题
+　　1.7　深入阅读
+　　第2章　啊哈！算法
+　　2.1　三个问题
+　　2.2　无处不在的二分搜索
+　　2.3　基本操作的威力
+　　2.4　排序
+　　2.5　原理
+　　2.6　习题
+　　2.7　深入阅读
+　　2.8　变位词程序的实现（边栏）
+　　第3章　数据决定程序结构
+　　3.1　一个调查程序
+　　.　3.2　格式信函编程
+　　3.3　一组示例
+　　3.4　结构化数据
+　　3.5　用于特殊数据的强大工具
+　　3.6　原理
+　　3.7　习题
+　　3.8　深入阅读
+　　第4章　编写正确的程序
+　　4.1　二分搜索的挑战
+　　4.2　编写程序
+　　4.3　理解程序
+　　4.4　原理
+　　4.5　程序验证的角色
+　　4.6　习题
+　　4.7　深入阅读
+　　第5章　编程小事
+　　5.1　从伪代码到c程序
+　　5.2　测试工具
+　　5.3　断言的艺术
+　　5.4　自动测试
+　　5.5　计时
+　　5.6　完整的程序
+　　5.7　原理
+　　5.8　习题
+　　5.9　深入阅读
+　　5.10　调试（边栏）
+　　第二部分　性能
+　　第6章　程序性能分析
+　　6.1　实例研究
+　　6.2　设计层面
+　　6.3　原理
+　　6.4　习题
+　　6.5　深入阅读
+　　第7章　粗略估算
+　　7.1　基本技巧
+　　7.2　性能估计
+　　7.3　安全系数
+　　7.4　little定律
+　　7.5　原理
+　　7.6　习题
+　　7.7　深入阅读
+　　7.8　日常生活中的速算（边栏）
+　　第8章　算法设计技术
+　　8.1　问题及简单算法
+　　8.2　两个平方算法
+　　8.3　分治算法
+　　8.4　扫描算法
+　　8.5　实际运行时间
+　　8.6　原理
+　　8.7　习题
+　　8.8　深入阅读
+　　第9章　代码调优
+　　9.1　典型的故事
+　　9.2　急救方案集锦
+　　9.3　大手术——二分搜索
+　　9.4　原理
+　　9.5　习题
+　　9.6　深入阅读
+　　第10章　节省空间
+　　10.1　关键在于简单
+　　10.2　示例问题
+　　10.3　数据空间技术
+　　10.4　代码空间技术
+　　10.5　原理
+　　10.6　习题
+　　10.7　深入阅读
+　　10.8　巨大的节省（边栏）
+　　第三部分　应用
+　　第11章　排序
+　　11.1　插入排序
+　　11.2　一种简单的快速排序
+　　11.3　更好的几种快速排序
+　　11.4　原理
+　　11.5　习题
+　　11.6　深入阅读
+　　第12章　取样问题
+　　12.1　问题
+　　12.2　一种解决方案
+　　12.3　设计空间
+　　12.4　原理
+　　12.5　习题
+　　12.6　深入阅读
+　　第13章　搜索
+　　13.1　接口
+　　13.2　线性结构
+　　13.3　二分搜索树
+　　13.4　用于整数的结构
+　　13.5　原理
+　　13.6　习题
+　　13.7　深入阅读
+　　13.8　一个实际搜索问题（边栏）
+　　第14章　堆
+　　14.1　数据结构
+　　14.2　两个关键函数
+　　14.3　优先级队列
+　　14.4　一种排序算法
+　　14.5　原理
+　　14.6　习题
+　　14.7　深入阅读
+　　第15章　字符串
+　　15.1　单词
+　　15.2　短语
+　　15.3　生成文本
+　　15.4　原理
+　　15.5　习题
+　　15.6　深入阅读
+　　第1版跋
+　　第2版跋
+　　附录a　算法分类
+　　附录b　估算测试
+　　附录c　时空开销模型
+　　附录d　代码调优法则
+　　附录e　用于搜索的c++类
 
+如何应用该书
+   可以当成字典书来查（如需要实现排序或者要对3d引擎优化时，可查看对应的章节)。
+
+我的心得与体会
+   书中的性能部分和应用的排序算法部分对我的wonder.js引擎的0.5.6,0.5.7版本的优化工作很有帮助。
+   书中第4章关于契约的应用我也深有感触！
+   还需要读第2遍，把每个章节的习题做一遍！
+   书中确实字字是珠玑，值得仔细品味和研究！
+
+** 《OpenGL Insights》1遍（未完）
+内容概要说明
+   本书算是基于opengl/webgl的gem类型的书了，每个章节是一个专题，是一本提高阶段的书籍。
+
+目录说明
+
+
+如何应用该书
+
+我的心得与体会
+   书中的webgl方面的专题、性能专题以及移动方面的专题（比如介绍了tile-based架构)都是很有用的。
+   而且书最后还给出了opengl es2.0的渲染管线图。
+   不过还有些内容我现在暂时用不到（比如基于opengl 4.0 的
+   tessellation shader，与occusion exclude相关的算法等），等到需要用到的时候，再来看。
+** 《WebGL Insights》1遍
+内容概要说明
+   这次专门讲Webgl了，包括了介绍浏览器是怎么实现webgl的、一些图形渲染基于webgl的实现、现有的开源引擎（如babylonjs）的设
+计和优化等。
+
+
+目录说明
+I. WebGL Implementations
+1. ANGLE: A Desktop Foundation for WebGL 
+2. Mozilla's Implementation of WebGL 
+3. Continuous Testing of Chrome's WebGL Implementation 
+
+II. Moving to WebGL
+4. Getting Serious with JavaScript 
+5. Emscripten & WebGL 
+6. Data Visualization with WebGL: from Python to JavaScript 
+7. Teaching an Introductory Computer Graphics Course with WebGL 
+
+III. Mobile
+8. Bug-Free and Fast Mobile WebGL 
+
+IV. Engine Design
+9. WebGL Engine Design in Babylon.js 
+10. Rendering Optimizations in the Turbulenz Engine 
+11. Performance and Rendering Algorithms in Blend4Web 
+12. Sketchfab Material Pipeline: From File Variations to Shader Generation 
+13. glslify: A module system for GLSL 
+14. Budgeting Frame Time 
+
+V. Rendering
+15. Deferred Shading in Luma 
+16. HDR Image-Based Lighting on the Web 
+17. Real-Time Volumetric Lighting for WebGL 
+18. Terrain Geometry - LOD Adapting Concentric Rings 
+
+VI. Visualization
+19. Data Visualization Techniques with WebGL 
+20. hare3d - Rendering Large Models in the Browser 
+21. The BrainBrowser Surface Viewer: WebGL-based Neurological Data Visualization 
+
+VII. Interaction
+22. Usability of WebGL Applications 
+23. Designing Cameras for WebGL Applications 
+
+
+
+
+
+如何应用该书
+
+我的心得与体会
+   一本非常好的书，对深入里面Webgl、学习其他开源引擎的设计和优化、移动端webgl开发和优化等都很有帮助！
+** 《游戏引擎架构》 2遍
+内容概要说明
+   全方位讲解了3d引擎的设计以及一些重要的实现、优化细节，是一本好书！
+
+目录说明
+第一部分 基础	1
+第1章 导论	3
+1.1 典型游戏团队的结构	4
+1.2 游戏是什么	7
+1.3 游戏引擎是什么	10
+1.4 不同游戏类型中的引擎差异	11
+1.5 游戏引擎概观	22
+1.6 运行时引擎架构	27
+1.7 工具及资产管道	46
+第2章 专业工具	53
+2.1 版本控制	53
+2.2 微软Visual Studio	61
+2.3 剖析工具	78
+2.4 内存泄漏和损坏检测	79
+2.5 其他工具	80
+第3章 游戏软件工程基础	83
+3.1 重温C++及最佳实践	83
+3.2 C/C++的数据、代码及内存	90
+3.3 捕捉及处理错误	118
+第4章 游戏所需的三维数学	125
+4.1 在二维中解决三维问题	125
+4.2 点和矢量	125
+4.3 矩阵	139
+4.4 四元数	156
+4.5 比较各种旋转表达方式	164
+4.6 其他数学对象	168
+4.7 硬件加速的SIMD运算	173
+4.8 产生随机数	180
+第二部分 低阶引擎系统	183
+第5章 游戏支持系统	185
+5.1 子系统的启动和终止	185
+5.2 内存管理	193
+5.3 容器	208
+5.4 字符串	225
+5.5 引擎配置	234
+第6章 资源及文件系统	241
+6.1 文件系统	241
+6.2 资源管理器	251
+第7章 游戏循环及实时模拟	277
+7.1 渲染循环	277
+7.2 游戏循环	278
+7.3 游戏循环的架构风格	280
+7.4 抽象时间线	283
+7.5 测量及处理时间	285
+7.6 多处理器的游戏循环	296
+7.7 网络多人游戏循环	304
+第8章 人体学接口设备（HID）	309
+8.1 各种人体学接口设备	309
+8.2 人体学接口设备的接口技术	311
+8.3 输入类型	312
+8.4 输出类型	316
+8.5 游戏引擎的人体学接口设备系统	318
+8.6 人体学接口设备使用实践	332
+第9章 调试及开发工具	333
+9.1 日志及跟踪	333
+9.2 调试用的绘图功能	337
+9.3 游戏内置菜单	344
+9.4 游戏内置主控台	347
+9.5 调试用摄像机和游戏暂停	348
+9.6 作弊	348
+9.7 屏幕截图及录像	349
+9.8 游戏内置性能剖析	349
+9.9 游戏内置的内存统计和泄漏检测	356
+第三部分 图形及动画	359
+第10章 渲染引擎	361
+10.1 采用深度缓冲的三角形光栅化基础	361
+10.2 渲染管道	404
+10.3 高级光照及全局光照	426
+10.4 视觉效果和覆盖层	438
+10.5 延伸阅读	446
+第11章 动画系统	447
+11.1 角色动画的类型	447
+11.2 骨骼	452
+11.3 姿势	454
+11.4 动画片段	459
+11.5 蒙皮及生成矩阵调色板	471
+11.6 动画混合	476
+11.7 后期处理	493
+11.8 压缩技术	496
+11.9 动画系统架构	501
+11.10 动画管道	502
+11.11 动作状态机	515
+11.12 动画控制器	535
+第12章 碰撞及刚体动力学	537
+12.1 你想在游戏中加入物理吗	537
+12.2 碰撞/物理中间件	542
+12.3 碰撞检测系统	544
+12.4 刚体动力学	569
+12.5 整合物理引擎至游戏	601
+12.6 展望：高级物理功能	616
+第四部分 游戏性	617
+第13章 游戏性系统简介	619
+13.1 剖析游戏世界	619
+13.2 实现动态元素：游戏对象	623
+13.3 数据驱动游戏引擎	626
+13.4 游戏世界编辑器	627
+第14章 运行时游戏性基础系统	637
+14.1 游戏性基础系统的组件	637
+14.2 各种运行时对象模型架构	640
+14.3 世界组块的数据格式	657
+14.4 游戏世界的加载和串流	663
+14.5 对象引用与世界查询	670
+14.6 实时更新游戏对象	676
+14.7 事件与消息泵	690
+14.8 脚本	707
+14.9 高层次的游戏流程	726
+第五部分 总结	727
+第15章 还有更多内容吗	729
+15.1 一些未谈及的引擎系统	729
+15.2 游戏性系统	730
+参考文献	733
+
+
+如何应用该书
+   在实践（开发wonder.js、实现相关的算法等）时或者遇到问题时，可查阅本书的对应章节。
+
+我的心得与体会
+   本书的5、6、7、13、14章节对我现在的引擎的改进就很有帮助！
+   等我要实现骨骼动画时，需要再仔细研究11章节，然后提炼出动画引擎！
+** 《富爸爸》系列 1遍
+内容概要说明
+目前我看了下面基本书：
+《富爸爸,穷爸爸》,
+《富爸爸财务自由之路》,
+《富爸爸辞职创业前的10堂课》
+《富爸爸21世纪的生意》
+
+目录
+
+
+如何应用该书
+   在实践中应用。
+
+我的心得与体会
+   书中的富人思维跟我的思维很像啊！也论述到了吸引力定律，也有很多跟灵性上相似的论点！
+   看来我是走在正确的道路上！
+
+** 《失控》未完
+内容概要说明
+   本书由一系列的文集组成，我目前只看了前面12章。
+
+目录
+
+
+如何应用该书
+
+我的心得与体会
+   书中提到了类似自下而上演化,去中心化,关于未来发展的趋势预测（本书写于1990年左右）,面向对象设计等内容，其中不少思想跟灵
+性思想类似。
+   本书的整体思想就是万物自发地演化（所谓的“失控”，即不需要过多地控制)。
+   本书思考得比较深入，配有具体的案例说明，观点比较新颖，不失为一本好书。
+
+** 《重构与模式》1遍
+内容概要说明
+   本书给出了通过重构来实现设计模式的实战技术。
+目录
+   ...
+
+   主要包括了 创建、简化、泛化、保护、聚集操作、实用重构 这几个方面的重构到设计模式的实战。
+
+如何应用该书
+   在实践中运用（其实我已经运用了很多了）
+
+我的心得与体会
+   可先看《重构：改善既有代码的设计》，然后再看本书(因为本书用到了很多《重构》这本书的知识)
+   本书对我来说没有很多新的知识可以吸收，主要是作为重构知识的复习。
