--- a/agenda/2016/06.01-06.10.org
+++ b/agenda/2016/06.01-06.10.org
@@ -1,104 +1,647 @@
 * TODO 今日计划
-** TODO add 3d ui
-** TODO use trello to manage roadmap
-https://trello.com/
-** TODO publish v0.6.0
+** TODO publish v0.5.8
 * 完成事项
-** DONE finish changes
-CLOSED: [2016-06-18 Sat 17:16]
-//add @singleton
+** DONE continue optimize(v0.5.8)
+CLOSED: [2016-06-10 Fri 20:37]
+*** DONE code refactor
+CLOSED: [2016-05-19 Thu 15:44]
+//fix Uint32Array:query extension
 
-//solve js.map problem
-restore karma version to ^0.13.22
-
-
-//extract AssertUtils
-//use chai
-
-
-//use file glob in unit/tsconfig.json
-
-
-////build task should read tsconfig.json
+//set pixelStorei(p 41)
 
 
 
-** DONE use trello to manage roadmap
-CLOSED: [2016-06-19 Sun 09:20]
-https://trello.com/
+//study http://www.html-5rocks.com/en/tutorials/speed/v8/
+Comparing integers is significantly cheaper than comparing floating-
+point values. The JIT compiler will optimize for either integers or
+floating-point values, but performance is more predictable if we use
+the same types everywhere, every time. For more information about
+low-level JavaScript optimizations 
 
 
 
-** TODO add 3d ui
-*** DONE add line
-CLOSED: [2016-06-23 Thu 07:46]
-**** DONE pass demo
-CLOSED: [2016-06-22 Mon 07:44]
+//refactor shadowMap:
+need use WEBGL_depth_texture???
+http://blog.tojicode.com/2012/07/using-webgldepthtexture.html
 
-**** DONE add arrow
-CLOSED: [2016-06-23 Thu 07:46]
-//create convex polygons
+GL_DEPTH_COMPONENT?
 
-//implement it
+//modify direction shadow map
 
-////support cylinder
+//modify point shadow map
 
-////support cylinder arrow
-
-
-//modify geometry_basic sample
-
-//fix arrow sample
-
-////**** TODO add coordinates
-
-
-
-
-
-*** DONE unit test
-CLOSED: [2016-06-25 Sat 17:56]
-
-*** DONE refactor
-CLOSED: [2016-06-25 Sat 18:50]
-refactor ui,uiThreeD component folder
-
-
-*** TODO 3d text
-threejs
-
-text texture
-
-unit test
-
+//test
 
 refactor
 
 
-**** TODO improve:  SDF Fonts + Glyph Texture and Compromises
-
-**** TODO support multi line?
-
-**** TODO support chinese
 
 
 
-*** TODO refactor
-refactor ui,uiThreeD component folder
-refactor 
+//set context init option:
+Save memory and improve performance by ensuring that contexts are created with the alpha, depth, stencil, antialias, and
+preserveDrawingBuffer options set to false, unless otherwise needed. Note that alpha, depth, and antialias are enabled
+by default and must be explicitly disabled. 
+
+The second conclusion is that the preserveDrawingBuffer context
+creation flag is best left in its default false value. Setting it to
+true essentially means that the browser can’t just swap buffers
+anymore, and instead must copy buffers, which is expensive in terms of
+memory bandwidth. 
 
 
-*** TODO billboard
-refer to bjs
+Keep the preserveDrawingBuffer context creation attribute in its
+default value false. In some browsers, also having the alpha con- text
+creation attribute as false may enable more efficient occlusion
+culling; it communi- cates to the browser compositor that the canvas
+element is opaque and does not need to be blended with whatever is
+underneath it on the page. However, if we need a static back- ground
+other than a flat color for our WebGL content, it may make sense to
+render the background using other HTML elements and only render the
+parts that change on every frame on the main WebGL canvas, keeping
+alpha as true. 
 
-** TODO publish v0.6.0
 
 
 
-* 明日计划
 
 
-* TODO 未来7日计划
+
+////add these unit test(especially shader test):
+- Rendering smoke tests, as described in Section 4.4.3. These usually
+render a single pixel and verify that it is not wildly wrong. We also
+sometimes render a full scene and verify only that no exceptions were
+thrown during the process. 
+- Shader function tests, as described in Section 4.4.4. These test the
+reusable func- tions that compose our shaders by invoking them in a
+test fragment shader and asserting that it produces white. 
+
+
+
+
+
+////refactor shader lib:
+use sendXXX
+remove VariableLib.ts
+remove sendUniformData,sendAttributeData
+
+pass all unit test
+
+
+*** DONE optimize cpu
+CLOSED: [2016-06-09 Thu 18:25]
+////sky box:
+close depth write(p441)
+
+
+//pass unit test
+
+
+
+
+
+**** DONE add refresh rate for framebuffer(shadow...)
+CLOSED: [2016-06-02 Thu 12:13]
+//refreshRate:
+Use 0 to render just once, 1 to render on every frame, 2 to render every two frames and so on... 
+
+//default value should be 1
+
+////mirror,cubemap should be 1
+
+//modify shadow
+
+
+//refactor:
+SceneDispatcher add "shadowMap" attr
+rename SceneDispatcher->shadowMap, ShadowMapModel to shadowMapConfig/ShadowMapConfig
+
+
+//pass unit test
+
+
+**** DONE Using the hardware scaling feature (user can define in config)
+CLOSED: [2016-06-02 Thu 17:09]
+refer to https://blogs.msdn.microsoft.com/eternalcoding/2012/03/22/unleash-the-power-of-html-5-canvas-for-gaming/#hs
+
+And once again, the canvas has a solution! The following code shows you how to use the hardware acceleration to rescale
+the internal working buffer of a canvas to the external size of the DOM object: 
+
+
+// Setting hardware scaling
+canvas.width = 300;
+canvas.style.width = window.innerWidth + 'px';
+canvas.height = 200;
+canvas.style.height = window.innerHeight + 'px';
+It is worth noting the difference between the size of the DOM objet (canvas.style.width and canvas.style.height) and the
+size of the working buffer of the canvas (canvas.width and canvas.height). 
+
+When there is a difference between these two sizes, hardware is used to scale the working buffer and in our case it is a
+excellent thing: we can work on a smaller resolution and let the GPU rescales the result to fit the DOM object (with a
+beautiful and free filter to blur the result). 
+
+In this case, the render is done in 300×200 and the GPU will scale it to the size of your window. 
+
+
+
+
+**** DONE VAO
+CLOSED: [2016-06-04 Sat 19:20]
+
+webgl 2? just use extension in webgl 1!
+To save a lot of API calls, use vertex array objects (VAOs) or interleave static vertex data. 
+
+
+
+
+that can significantly improve per- formance on mobile devices
+
+VAOs are available in WebGL 1.0 with the OES_ vertex_array_object
+extension, which is widely supported on mobile devices. As of early
+2015, more than 80% of smartphone and tablet clients recorded by
+WebGL Stats have it 
+
+
+
+If vertex array objects (VAOs) are supported, then we build one for
+each combination of vertex buffers and index buffer present in the
+DrawParameters objects. As we share the buffers between many different
+geometries, the actual number of combinations is usually quite
+low. This allows us at dispatch time to simplify all the buffer checks
+to a single equality comparison between the current VAO and the
+previous one. Even when the VAOs are different, setting them with
+WebGL is cheaper on the CPU than setting all the different buffers and
+vertex pointer attributes, which makes them a big win for complex
+scenes.
+
+
+Adding a fallback for devices without VAO support is also
+straightforward. Let’s call the code that binds buffers and sets
+vertex attrib pointers related to a specific mesh the binding
+block. If VAOs are supported, the code should initialize the VAO of
+each mesh using the binding block. Then, when the mesh is drawn, the
+code either binds the VAO if VAOs are supported, or executes the
+binding block if VAOs are not supported. The only case where this
+becomes more complicated is when there’s a different number of active
+vertex attribute arrays for different meshes—then the code should add
+disable- VertexAttribArray calls where appropriate. For a complete
+code example, see an explanation of VAOs* or an implementation of a
+fallback path in SceneJS
+(https://github.com/xeolabs/scenejs/blob/v4.0/src/core/display/chunks/geometryChunk.js)
+
+
+
+
+Lowering the number of vertex buffers helps to reduce CPU usage if
+VAOs are not a good fit for the code for some reason. This can be done
+by interleaving different types of vertex data for the same object: If
+we have, for example, positions, texture coordinates, and normals for
+each vertex, they can all be stored in the same vertex buffer in an
+interleaved fashion. In our CPU-bound drawing test that uses four
+vertex attributes, interleaving the attributes increased the FPS
+around 4%. The downside is that interleaving the data needs to be
+either handled by the content creation pipeline or done at load time;
+the latter may marginally slow down loading. Interleaving three
+attributes for a million vertices in a tight JS loop had a cost of
+around 200 ms on a Nexus 5 (2013 phone). 
+
+
+
+
+http://blog.tojicode.com/2012/10/oesvertexarrayobject-extension.html
+
+http://www.openglsuperbible.com/2013/12/09/vertex-array-performance/
+
+ 
+
+
+//use vao to bind array buffer
+
+//fix shadow bug
+
+//test vao
+
+
+
+//bind cache
+
+//test vao
+
+
+
+//fix change custom buffer data bug
+
+//consider dirty
+
+//test vao
+
+
+
+
+
+//fix fire procedural bug
+
+//add dispose
+
+
+//procedural texture not need and not support vao?
+
+////together with index buffer?
+
+
+//fallback
+
+
+refactor:
+//format and clear code
+//rename Program->sendAttributeData to sendAttributeBuffer
+
+
+
+//test performance in benchmark
+pass 1000_light test
+
+
+
+////调试：
+开发绘制直线、坐标轴等调试绘图api
+
+
+
+//pass all run test
+
+
+////**** TODO shader lib add cache
+no longer to iterate the libs if not dirty
+
+just send result vao or vbos/ uniform data
+
+
+pass vao
+
+
+beachmark test
+
+
+**** DONE optimize from <<WebGL Insights>>
+CLOSED: [2016-06-05 Sun 07:46]
+
+For portability, space requirements of varyings and uniforms within the limits of the GLSL ES spec. Consider using
+vec4 variables instead of float arrays, as they potentially allow for tighter packing. See A.7 in the GLSL ES spec. 
+
+
+
+
+
+
+
+
+
+
+When using an RGB framebuffer, always implement a fallback to RGBA for when RGB is not supported. Use
+gl.checkFramebufferStatus. 
+
+
+
+
+If shrinking the browser window results in massive speed gains, consider using a half-resolution framebuffer during
+mouse interaction. 
+
+
+
+//Use OES_element_index_uint to draw large indexed models with a single draw call.
+
+
+
+need change???
+The textureProj GLSL function, vec4 color = textureProj(sampler, uv.xyw);, can be simulated with vec4 color =
+texture(sampler, uv.xy/uv.w) 
+
+
+
+***** TODO ANGLE optimize(refer to <<WebGL Insights>>->chapter 1):
+- Avoid use of gl.TRIANGLE_FAN, as it may be emulated in software.
+
+- Create new textures, rather than changing the dimensions or format of old ones.
+  - if only the pixel data contained in a texture need to be updated, it is best to reuse the texture—the additional
+overhead is only incurred when updat- ing texture format or dimensions, because these require redefinition of the mip-
+map chain. 
+
+- Do Not Perform Clears with Scissors or Masks(color mask,stencil mask) Enabled
+so check and warn info when clear
+
+- Avoid Render Wide Lines as Polygons
+(ANGLE does not support line widths greater than 1.0, commonly called “wide” lines)
+
+
+
+
+- Avoid Uint8Array Data in Index Buffers
+
+
+- Avoid 0xFFFF in 16-Bit Index Buffers
+  
+
+- Always Specify the Fragment Shader Float Precision
+
+- Do Not Use Rendering Feedback Loops
+(In the OpenGL APIs, attempting to write to and sample from the same texture or renderbuffer in a rendering operation is
+considered a rendering feedback loop)
+
+
+- Don’t Use Extensions without Having a Fallback Path
+
+- Use Immutable Textures When Available (use EXT_texture_storage extension to use texStorage* command instead of
+  texImage* command)
+Historically, OpenGL and WebGL textures had to be created one mip level at a time. OpenGL does this via glTexImage*, a
+method that allows users to cre- ate internally inconsistent textures, considered by the GL to be “incomplete.” This
+same method is what is available to developers in WebGL, as texImage*. By contrast, Direct3D requires that users define
+the dimensions and format of their entire textures at texture creation time, and it enforces internal consistency. 
+
+Because of this difference, ANGLE must do a considerable amount of bookkeep- ing and maintain system memory copies of
+all texture data. The ability to define an entire texture at creation time did later get introduced to OpenGL and its
+related APIs as immutable textures, which also enforce internal consistency and disallow changes to dimensions and
+format. Immutable textures came to OpenGL ES 2.0 with EXT_texture_storage [Khronos 13a], and they are included in the
+core OpenGL ES 3.0 specification and the WebGL 2 Editor’s Draft specifica- tion. When immutable textures are available
+via extension or core specification, some of ANGLE’s bookkeeping can be avoided by using the texStorage* com- mands to
+define textures. 
+
+
+- Use RED Textures instead of LUMINANCE(use EXT_texture_rg extension [Khronos 11] to use the RED and RG formats)
+(simply using RED textures in place of LUMINANCE and RG in place of LUMINANCE_ALPHA when using ANGLE with APIs that
+support them) 
+
+In WebGL and unextended OpenGL ES 2.0, the only option developers have for expressing single-channel textures is the
+LUMINANCE format, and LUMINANCE_ALPHA for two-channel textures. The EXT_texture_rg extension [Khronos 11] adds the RED
+and RG formats, and these formats become core functionality in OpenGL ES 3.0. The formats also appear in the WebGL 2
+Editor’s Draft specification. Meanwhile, Direct3D 11 has dropped all support for luminance textures, providing only red
+and red-green formats [MSDN 14a]. This may seem to be a trivial difference—a channel is a channel—but sampling from a
+luminance texture is performed differently than from textures of other formats. The single channel of a luminance
+texture is duplicated into the red, green, and blue channels when a sample is performed, while sampling from a RED
+texture populates only the red channel with data. Similarly, the second channel of a LUMINANCE_ALPHA and an RG texture
+will populate only the alpha and green channels in a sample, respectively. To support luminance formats against Direct3D
+11, rather than alter the swizzle behavior in shaders, ANGLE instead expands the texture data to four channels. This
+expansion, and the associ- ated additional memory and texture upload performance costs, can be avoided by developers
+keen for clock cycles by simply using RED textures in place of LUMINANCE and RG in place of LUMINANCE_ALPHA when using
+ANGLE with APIs that support them. 
+
+
+
+- Avoid Full-Texture Swizzle
+Texture swizzling is an OpenGL ES 3.0 feature which allows a texture’s compo- nents to be sampled in a different order,
+using the TEXTURE_SWIZZLE_R, TEXTURE_SWIZZLE_G, TEXTURE_SWIZZLE_B, and TEXTURE_ SWIZZLE_A texture parameters. This is
+most often used to read RGBA textures as BGRA, or vice versa, and can also be used to replicate components as with
+luminance textures. This feature is, however, not supported by Direct3D 11. Even though it appears a seemingly simple
+operation to perform during the shader translation, it is actually not feasible to determine which textures are sampled
+where, because samplers can be passed from function to function as parameters, and the same texture sampling function
+can be used to sample various different textures. ANGLE therefore swizzles the texture data itself. This consumes some
+memory and incurs some overhead at texture upload. These costs can be avoided by not changing the TEXTURE_SWIZZLE_R,
+TEXTURE_SWIZZLE_G, TEXTURE_SWIZZLE_B, and TEXTURE_SWIZZLE_A texture parameters from their defaults. If necessary, use
+multiple shader variants to account for dif- ferent texture component orders. 
+
+
+
+
+****** not use
+
+- Avoid Uniform Buffer Binding Offsets
+Uniform buffer objects (UBOs), newly added in OpenGL ES 3.0, are bound objects which store uniform data for the use of
+GLSL shaders. UBOs offer benefits to developers, including the ability to share uniforms between programs and faster
+switching between sets of uniforms. OpenGL ES 3.0 also allows UBOs, much like other buffer objects, to be bound at an
+offset into the buffer, rather than just the buffer head. Direct3D, on the other hand, does not support referencing its
+analogous structure, constant buffers, until Direct3D 11.1, with the addition of the VSSetConstantBuffers1 method [MSDN
+14d]. Offsets are supported with a software workaround on all hardware of lower feature levels. Developers can avoid any
+performance penalty associated with this workaround by binding UBOs at offset 0 only. 
+
+
+
+
+****** need more understand!
+- Avoid Three-Channel Uint8Array/Uint16Array Data in Vertex Buffers(can use four-channel with Uint32Array data)
+Direct3D has limited support for three-channel vertex formats. Only 32-bit three- channel formats (both integer and
+float) are supported natively [MSDN 14a]. Other three-channel formats are expanded by ANGLE to four-channel internally
+when using a Direct3D backend. If the vertex buffer usage is dynamic, this con- version will be performed each time the
+buffer is used in a draw. To avoid the expansion, use four-channel formats with 8- or 16-bit types. 
+
+
+- Avoid Integer Cube Map Textures
+Cube maps with unnormalized integer formats are not supported by Direct3D 11 [MSDN 14c]. The ANGLE team hasn’t
+encountered any uses for it, which may be the reason it was left out of D3D11, but it is a feature of OpenGL ES 3.0 and
+gets tested by the conformance tests. ANGLE therefore must emulate it in ANGLE’s ESSL to HLSL translator. The cube
+texture is replaced by a six- layer 2D array texture, and the face from which to sample, and at what loca- tion, is
+manually computed. Rather than unnormalized integer formats, we recommend using normalized integer formats for cube
+maps. If integer values are expected, multiply the sampled value by the maximum integer value, and round to the nearest
+integer. For example, for signed 16-bit integers: int i = int(round(32767 * f)); 
+
+
+
+- Beware of Shadow Lookups in 2D Array Textures
+Our final recommendation is a minor one, because the range of hardware affected is relatively small. Shadow comparison
+lookups are a feature introduced in OpenGL ES 3.0. These texture lookups can perform prefilter comparison of depth data
+contained in a texture against a provided reference value. ES 3.0 also intro- duces new texture types, including 2D
+texture arrays. Where these two features intersect, a caveat emerges. Direct3D 11 does support shadow lookups for 2D
+tex- ture arrays—but not at feature level 10_0 [MSDN 14e]. For this reason, ANGLE must either exclude feature level 10_0
+hardware from ES 3.0 support or implement a workaround, with potential performance penalties. If the latter approach is
+cho- sen, developers may encounter performance issues on Direct3D 10.0 hardware. If the former approach is chosen
+instead, then OpenGL ES 3.0 would not be avail- able on this hardware at all. 
+
+
+
+
+
+
+***** TODO firefox implement webgl(refer to <<WebGL Insights>>->chapter 2):
+
+- Each drawElements call can only work with one index
+type anyway. Keep separate index types in separate element array
+buffers. 
+
+Using the same element array buffer with multiple index types only
+requires the implementation to maintain separate trees for each type;
+there are three possible types so there can be up to three trees to
+maintain for a given element array buffer, which multiplies by three
+the memory usage and speed overhead. Just don’t do it. There is no
+good reason to: Each drawElements call can only work with one index
+type anyway. Keep separate index types in separate element array
+buffers. 
+
+
+- So if you don’t need to update a frame, don’t it, don’t even call clear. 
+
+The first conclusion of this discussion is that if you don’t need to
+update a frame, avoid re-rendering it will save not only the time
+it takes to render it, but also a lot of internal compositing work
+and synchronization. So if you don’t need to update a frame, don’t
+touch it, don’t even call clear. 
+
+***** TODO refer to <<WebGL Insights>>->chapter 4:
+This means that if we want to expose a property on an object, it’s
+faster to make it a public field rather than abstract it behind get
+and set methods 
+
+
+
+***** TODO refer to <<WebGL Insights>>->chapter 8(mobile chapter):
+
+An application should not have unnecessary “get” calls of any kind,
+especially getError, or frequent calls requiring synchronization like
+readPixels, flush, or finish.  
+
+
+****** Reducing Bandwidth Usage
+The more obvious ways to reduce bandwidth are reducing texture or
+framebuffer resolution.  
+
+
+
+optimize full-screen effects
+Implementing full-screen effects in an efficient way or avoiding them
+altogether can also enable huge bandwidth savings [McCaffrey 12;
+Pranckevičius 11]. In particular, it is better to combine different
+postprocessing filters into a single shader or add simple post-
+processing effects directly into the shaders used to render geometry,
+when possible. 
+
+
+
+Using lots of small polygons also costs bandwidth on tiler
+architectures, since they need to access the vertex data separately
+for each tile [Merry 12]. Optimizing models to minimize the vertex and
+triangle count helps on these GPUs. 
+
+
+***** TODO refer to <<WebGL Insights>>->chapter 10(Turbulenz Engine):
+
+cull lights:
+For lights, we may go an extra step by projecting the bounding box
+into the screen to calculate how many pixels it would actually light,
+discarding the light or disabling its shadows’ maps depending on its
+contribution to the scene. 
+
+
+***** TODO refer to <<WebGL Insights>>->chapter 14:
+
+When the user spins the model around its turntable using a touch
+interface, a smooth frame rate is achieved by rendering to a
+low-resolution framebuffer (left). When the user lifts her fingers, we
+redraw the model in full resolution (right). 
+
+Listing 14.7 Low-fidelity/high-fidelity modes for glass effect.
+MyEngine.Buddha = function() { this.framebuffers = {lo: null, hi: null}; this.textures = {lo: null, hi: null};
+};
+MyEngine.Buddha.draw = function(gl, turntable) {
+var texture, canvas = gl.canvas;
+if (turntable.state = = turntable.states.Resting) {
+//Use a full-resolution framebuffer:
+texture = this.textures.hi;
+gl.bindFramebuffer(gl.FRAMEBUFFER, this.framebuffers.hi);
+gl.viewport(0, 0, canvas.width, canvas.height);
+} 
+else {
+//Use a half-resolution framebuffer:
+texture = this.textures.lo;
+gl.bindFramebuffer(gl.FRAMEBUFFER, this.framebuffers.lo); 
+gl.viewport(0, 0, canvas.width/2, canvas.height/2);
+}
+    //...draw Buddha to offscreen surface...
+    gl.viewport(0, 0, canvas.width, canvas.height);
+    gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+    gl.bindTexture(gl.TEXTURE_2D, texture);
+    //...draw fullscreen triangle to canvas...
+    gl.bindTexture(gl.TEXTURE_2D, null);
+};
+￼
+
+
+////*** TODO optimize memory
+资源运行时管理：
+通过记录引用数来释放资源（p265)
+
+
+
+
+
+**** DONE update typescript version
+CLOSED: [2016-06-05 Sun 14:18]
+
+
+**** DONE 改进GameObject->update:
+CLOSED: [2016-06-09 Thu 18:22]
+use batch update(p679)
+
+
+batch update:
+action
+
+
+
+
+//separate uiobject->update and render
+//add update
+
+
+//pass unit test
+
+
+//UIObjectScene not bind its own startloop,endloop
+
+
+//pass unit test
+
+
+//batch action for uiobject and gameobject
+
+
+//batch script
+
+////EntityObject add uidStr cache
+//remove EntityObject->onStartLoop,onEndLoop
+
+//pass all run test
+
+
+//solve source map!
+
+//pass ui!
+
+
+//merge detector
+
+
+
+////batch physics
+
+
+
+//remove beforeUpdateChildren,afterInitChildren
+
+//remove after/before engine event
+
+
+
+
+
+optimize benchmark_1000_basic:
+optimize action
+
+
+*** DONE publish
+CLOSED: [2016-06-10 Fri 20:37]
+//pass all run test
+
+//add head comment
+
+
+pass sourcemap problem!
+
+publish to qq
+
+
+city:5.5ms
+
+1000 light:50 fps
+
+* TODO 明日计划
 ** TODO build a outdoor demo
 *** TODO tree+instance+terrain+free camera collision+shadowMap sample
 http://localhost:63342/Wonder.js/reference/babylonjs_samples/Samples/Demos/Instances/index.html
@@ -164,6 +707,7 @@ add TerrainCollider
 **** TODO camera collision
 
 **** TODO heightmap physics
+
 
 
 
@@ -278,13 +822,10 @@ the top contenders in terms of performance as tested on a MacBook Pro
 
 
 
-optimize shader:
-staticly compile shader param of libs to one large collection of the one entityObject
-(so no need to iterate the shader libs at runtime)
 
 
 
-//data orient driven(refer to game engine germ 1/2)
+data orient driven(refer to game engine germ 1/2)
 
 
 
@@ -1013,13 +1554,13 @@ texture = this.textures.lo; gl.bindFramebuffer(gl.FRAMEBUFFER, this.framebuffers
 调试：
 开发绘制直线、坐标轴等调试绘图api
 
-//研究data driven engine(p656)
+研究data driven engine(p656)
 
-//改进GameObject->update:
+改进GameObject->update:
 use batch update(p679)
 
 
-//sky box:
+sky box:
 close depth write(p441)
 
 
@@ -1084,28 +1625,12 @@ support full screen(refer to babylon.engine.ts->450 line)
 
 
 
+
+* TODO 未来7日计划
+
 * TODO 疑问
 
 * TODO 未做事项
 ** control elapse time:
 增量时间：
 设置上限（p292)
-
-* TODO more
-** TODO improve 3d ui
-*** TODO line
-support polygons line:
-[[https://mattdesl.svbtle.com/drawing-lines-is-hard][Drawing Lines is Hard]]
-
-add dash line
-
-
-*** TODO improve 3d text
-[[http://wdobbie.com/post/gpu-text-rendering-with-vector-textures/][draw in gpu]]
-
-
-optimize:
-https://www.eventbrite.com/engineering/its-2015-and-drawing-text-is-still-hard-webgl-threejs/
-http://hack.chrons.me/opengl-text-rendering/
-[[http://www.valvesoftware.com/publications/2007/SIGGRAPH2007_AlphaTestedMagnification.pdf]]
-
