--- a/skong/today.org
+++ b/skong/today.org
@@ -1,227 +1,103 @@
 * TODO 今日计划
-** TODO modify
-AssertUtils.assert can move to @require ... 
+** TODO compute uv
+** TODO solve: karma charset messy code problem
 
-add @singleton
-** TODO 熟悉 标注 模块代码
-DEADLINE: <2016-06-17 Fri> SCHEDULED: <2016-06-16 Thu>
-*** TODO 熟悉已有的模块代码
-**** TODO 熟悉gizmo
-**** TODO 熟悉view层对threejs的调用代码
-*** TODO 给出初步的模块设计方案
-**** node
-***** [#A] need always show three lines(width,height,depth)
-this means it may need adjust the position of the line!
+only test your file(tsconfig.json, karma)
 
 
-* 完成事项
-** TODO 熟悉 标注 模块代码
-//*** TODO 熟悉已有的模块代码
-//**** TODO 熟悉gizmo
-//**** TODO 熟悉view层对threejs的调用代码
 
-*** TODO dev demo
-//learn code flow:
-measure
-product
-
-//learn home->circle, pannel how to draw
-
-//how to use three to draw
-
-//line
-//text
-//arrow
-
-//learn projector
-
-
-//separate logic and render(so can change line draw method by only edit render)
-
-//refactor:
-clear code
-remove rebundant files
-rename Label to WglLabelxxx
-
-
-
-
-
-//check with youliang
-
-
-
-show line,text in product:
-//try use three to render
-render can show 3d text(billboard):
-//learn threejs->3d text
-
-//decide billboard plan
-
-//implement in product
-
-
-
-//billboard:
-//test demo in threejs
-//fix product
-
-
-
-
-
-//refactor WglTextGeometry
-rewrite WglDimension: use builder pattern to assemble render primitive
-move related classes to renderer/ folder
-
-
-
-
-//learn 3d text:
-drawing letter shapes via GL_LINES, create 3D meshes of letters or render character textures to 2D quads in a 3D environment.
-
-
-////- drawing letter shapes via GL_LINES
-
-- render character textures to 2D quads in a 3D environment:
-bitmap
-freetype(like vector image)
-
-- create 3D meshes of letters
-- [[http://wdobbie.com/post/gpu-text-rendering-with-vector-textures/][draw in gpu]]
-
-
-
-
-
-//need always show three lines(width,height,depth)
-check with mao: this means it may need adjust the position of the line? or like selection?
-
-
-
-
-
-
-//modify space compute:
-fix length of xyz:
-xy: 
-   //show complement line:
-   //adjust position(move outer)
-
-xy
-yz
-
-//show line in the correct position
-//show text in the correct position and direction(rotate after set billboard rotation?)
-
-
-
-
-
-
-
-
-//refactor:
-refactor Builder
-refactor data
-
-
-
-**** TODO adjust the position of the line
-resize font size by distance between the camera and the product
-
-
-modify xz,yz->top/end line direction:
-billboard in vertical plan? modify in each view?
-
-
-solve camera position
-
-update compute in each frame
-if startPoint change, translate diplay.node
-
-
-check
-
-
-unit test compute logic
-
-
-**** TODO more
-fix overlook view
-
-
-
-fix plan view
-
-
-
-
-refactor:
-clear code
-class, method add js doc
-
-
-check
-
-
-
-*** TODO fix bug
-**** move the whole product(单格衣柜), the label should move along it
-
-
-*** TODO optimize
+** TODO optimize
 //redraw only when camera move
 
 optimize computation
 
 
 
+* 完成事项
+** DONE compute uv
+CLOSED: [2016-07-18 Mon 13:48]
+//finish
+
+//pass convex polygon
+
+//study polygon clipping!
+////then use constrained delaunay?
+
+
+//pass concave polygon(ear clipping)
+
+//unit test
+
+
+//run test
+//use wonder.js to test
+
+
+//refactor
+extract ClipPolygonBuilder
+
+
+** TODO pass product run test(now no label?)
+check bug
+
+
+refactor:
+//judge whole entity: its parent(getParent()) should be blueproot?
+
+not handle in processBefore,After,process, instead listen Entity property change,camera change event
+
+mao add camera switch event, then listen to the event instead of in cmdchange command->onExecute
+
+not directly visit THREE.Camera, visit camera instead
+
+get camera from context.camera? or elsewhere?
+
+add comment
+
+more gizmo related refactor
+
+
+
+
+
+optimize:
+WglMeasurementLabelComputer->_convertEntityToBoxHelper: not create BoxHelper each time!(cache?)
+
+
+
+record bug:
+//fix change main product bug
+
+fix change main product scale bug?
+
+fix "change to combined product->drag product, the label don't follow" bug(how to drag the whole combined product?)
+
+** TODO run test uv computer
+
+
+
+** TODO optimize uv computer
+
+
+
+
 * TODO Change
-** TODO implement draw line,arrow,3d text in wonder
-try use wonder to render or use independent graph code to render?
        
 
 * Note
-** tech design
-draw line:
-line primitive
-////cylinder geometry
-more
-
-
-
-draw text:
-canvas/dom draw 2d text
-3d text + billboard
-
-** requirements
-linewidth can be 1
-can zoom text
 
 
 * TODO 明日计划
 
 
-
 * TODO 未来7日计划
 
 * TODO 疑问
-what's "pdms" ?
-
-
 
 
 * TODO 未做事项
-** unit test
-*** TODO coverage
-support istanbul
-*** TODO improve
-show "it" spend time
 
-*** TODO 测试nodejs
-
-*** TODO study bower,npm
-http://www.open-open.com/lib/view/open1455411109073.html
-
-read more
+* TODO git commit specification
+[类型] + {[编号]} + 描述
+类型：功能 | 缺陷(跟随一个或多个编号)(禅道上的bug编号) | 优化
+例如：[缺陷][1341] 拖入门窗模型到2D户型下时，门窗在墙体上没有距离显示 
